# qt_player-re

Desktop/NSpace/Qt/Player/: CMakeLists.txt  LeftNavButton.qml  LeftPaneContent.qml  Main.qml  RightLyricPage.qml  RightPlayerPage.qml  RightPlayerWidgetFunContent.qml  RightPlayerWidgetProgressBar.qml  icon.qrc  main.cpp  qrc.qrc  res.qrc
Desktop/NSpace/Qt/Player/cpp/Services/: ActionDispatcher.cpp  ActionDispatcher.h  AppLogic.cpp  Connector.h  EventBus.h  LifeStageModule.cpp  LifeStageModule.h  LogicManager.h  LrcParser.cpp  LrcParser.h  LyricModule.cpp  LyricModule.h  PlayerModule.cpp  PlayerModule.h  Storage.cpp  Storage.h  StoreState.cpp  StoreState.h  extractMetaData.cpp  extractMetaData.h
Desktop/NSpace/Qt/Player/qml/Other/: RoundCornorContainer.qml
Desktop/NSpace/Qt/Player/qml/RightPane/ListView/: RightListFunButton.qml  RightListFunContent.qml  RightListItemContent.qml  RightListItemIcon.qml  RightListItemSearchBar.qml  RightListListContent.qml  RightListPage.qml
Desktop/NSpace/Qt/Player/qml/RightPane/LyricView/: RightLyricLineContent.qml  RightLyricPage.qml
Desktop/NSpace/Qt/Player/qml/RightPane/PlayerView/: RightListPage.qml  RightPaneContent.qml  RightPlayerControlButton.qml  RightPlayerDiscoContent.qml  RightPlayerFunContent.qml  RightPlayerPage.qml  RightPlayerWidgetControlContent.qml  RightPlayerWidgetFunContent.qml  RightPlayerWidgetFuncButton.qml  RightPlayerWidgetProgressBar.qml  RightPlayerWidgetSongInfo.qml
Desktop/NSpace/Qt/Player/qml/RightPane/SettingView/: RightSettingPage.qml
Desktop/NSpace/Qt/Player/taglib/lib/pkgconfig/: taglib.pc  taglib_c.pc
Desktop/NSpace/Qt/Practice/: CMakeLists.txt  LeftNavButton.qml  LeftPaneContent.qml  Main.qml  RightListPage.qml  RightLyricPage.qml  RightNavButton.qml  RightPaneContent.qml  RightPlayerControlButton.qml  RightPlayerPage.qml  RightSettingPage.qml  main.cpp  res.qrc  resources.qrc
